<resources>
    <string name="app_name">SHE Mobile</string>
    <string name="she">Safety Health Environment</string>
    <string name="login">Login</string>
    <string name="input_password">Input Password</string>
    <string name="password">Password</string>
    <string name="input_employee_id">Input Employee ID</string>
    <string name="employee_id">Employee ID</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="hi_roby">Hi, Roby Sunjaya</string>
    <string name="imageaccount">imageAccount</string>
    <string name="what_do_you_want_to_do_today">What do you want to do today?</string>
    <string name="notification">Notification</string>
    <string name="medical_center">Medical Center</string>
    <string name="btnswitch">Switch</string>
    <string name="category">Category</string>
    <string name="check_to_psikologist">Check To Psikologist</string>
    <string name="check_to_doctor">Check To Doctor</string>
    <string name="antigen_tes">Antigen Tes</string>
    <string name="information_and_articles">Information and Articles</string>
    <string name="ic_account">ic_account</string>
    <string name="she_voice_periode_nov_2024">SHE Voice Periode Nov 2024</string>
    <string name="posted_20_november_2024">Posted: 20 November 2024</string>
    <string name="ic_pengunguman">ic_pengunguman</string>
    <string name="posted_20_desember_2024">Posted 20 Desember 2024</string>
    <string name="kebijakan_k3">Kebijakan K3</string>
    <string name="jadwal_pemerikasaan_motor">Jadwal Pemerikasaan Motor</string>
    <string name="posted_20_januari_2025">posted_20_Januari_2024</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="ic_home">ic_home</string>
    <string name="ic_history">ic_history</string>
    <string name="ic_profile">ic_profile</string>
    <string name="btn_login">btn_login</string>
</resources>