<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.robysun.shemobile.dashboard">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"/>
    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/baseline_access_time_24" />
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_account_circle_24" />
</menu>