<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:contentDescription="@string/btn_login"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/she"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/she"
        android:textSize="30sp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo_dashboard" />


    <TextView
        android:id="@+id/employee_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/employee_id"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ip_employee_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="username"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/ip"
        android:ems="10"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/input_employee_id"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:ignore="RtlSymmetry,VisualLintTextFieldSize" />


    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ip_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="10dp"
        android:autofillHints="password"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/ip"
        android:ems="10"
        android:fontFamily="@font/poppinsregular"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:ignore="RtlHardcoded,RtlSymmetry,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/login"
        android:textColor="#E0F2F1"
        tools:ignore="VisualLintButtonSize" />


</LinearLayout>





