<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bghome"
    tools:context=".dashboard">

    <ImageView
        android:id="@+id/ic_account"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/ic_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <TextView
        android:id="@+id/hi_roby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/hi_roby"
        android:textColor="#E0F2F1"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toEndOf="@+id/ic_account"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/whatdoyouwant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/what_do_you_want_to_do_today"
        android:textColor="#E0F2F1"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ic_account"
        app:layout_constraintTop_toBottomOf="@+id/hi_roby"
        app:layout_constraintVertical_bias="0.009" />

    <ImageView
        android:id="@+id/ic_notification"
        android:layout_width="35dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/notification"
        app:layout_constraintStart_toEndOf="@+id/hi_roby"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_notifications_24" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btnswitchshape"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whatdoyouwant">

        <TextView
            android:id="@+id/medicalcenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/medical_center"
            android:textColorHint="@color/textswbtn"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_switch"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/btnswitchshape"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/btnswitch"
            android:textColor="#435550"
            android:textColorHint="@color/textswbtn"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scrollkonten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ScrollView
            android:id="@id/scrollkonten"
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsbold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/category"
                android:textSize="20sp" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/opsi_medical_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_medical_center"
                android:layout_width="61dp"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:contentDescription="@string/medical_center"
                app:srcCompat="@drawable/ic_rs" />

            <ImageView
                android:id="@+id/ic_psikologist"
                android:layout_width="61dp"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:contentDescription="@string/check_to_psikologist"
                app:srcCompat="@drawable/ic_psikolog" />

            <ImageView
                android:id="@+id/ic_antigen"
                android:layout_width="61dp"
                android:layout_height="60dp"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:contentDescription="@string/check_to_psikologist"
                app:srcCompat="@drawable/ic_antigen" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/check_to_doctor"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/check_to_doctor"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/check_to_psikologist"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/check_to_psikologist" />

            <TextView
                android:id="@+id/antigentes"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:text="@string/antigen_tes" />

        </LinearLayout>

        <TextView
            android:id="@+id/informationandarticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_and_articles" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pengumuman"
                android:layout_width="76dp"
                android:layout_height="89dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/ic_pengunguman"
                app:srcCompat="@drawable/pengunguman" />
            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="20dp"
                android:layout_marginTop="2dp"
                android:orientation="vertical"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/pengumuman"
                app:layout_constraintTop_toBottomOf="@+id/informationandarticle">

                <TextView
                    android:id="@+id/she_voice_periode_nov_2024"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/she_voice_periode_nov_2024" />
                <TextView
                    android:id="@+id/posted"
                    android:layout_width="226dp"
                    android:layout_height="20dp"
                    android:text="@string/posted_20_november_2024"
                    tools:ignore="VisualLintBounds" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pengumuman2"
                android:layout_width="76dp"
                android:layout_height="89dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/ic_pengunguman"
                app:srcCompat="@drawable/pengunguman" />
            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="20dp"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/jadwal_pemerikasaan_motor"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/jadwal_pemerikasaan_motor" />

                <TextView
                    android:id="@+id/posted2"
                    android:layout_width="226dp"
                    android:layout_height="20dp"
                    android:text="@string/posted_20_november_2024"
                    tools:ignore="VisualLintBounds,TextSizeCheck" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pengumuman3"
                android:layout_width="76dp"
                android:layout_height="89dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/ic_pengunguman"
                app:srcCompat="@drawable/pengunguman" />
            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="20dp"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/kebijakan_k3"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/kebijakan_k3" />
                <TextView
                    android:id="@+id/posted3"
                    android:layout_width="226dp"
                    android:layout_height="20dp"
                    android:text="@string/posted_20_november_2024"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ic_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/ic_home"
                app:srcCompat="@drawable/baseline_home_24"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/home"
                android:textColor="#E0F2F1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/ic_history"
                app:srcCompat="@drawable/baseline_access_time_24"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/history"
                android:textColor="#E0F2F1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/ic_profile"
                app:srcCompat="@drawable/baseline_account_circle_24"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile"
                android:textColor="#E0F2F1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>